# abis-synth

./: README.adoc  pyproject.toml  test_client_broad.ttl  test_client_conservation.ttl  test_client_conservation_01.ttl  test_client_degree.ttl  test_client_embargoed.ttl  test_client_narrow.ttl
client/: __main__.py  create_defined_ns.py  synthesizer_abis.py  synthesizer_tern.py
client/model/: __init__.py  agent.py  attribute.py  feature_of_interest.py  klass.py  observation.py  sample.py  sampling.py  site.py  site_visit.py  tern_dataset.py
client/test_data/kg/datagraphs/: bdr.ttl
tests/: test_attribute.py  test_feature_of_interest.py  test_float.py  test_observation.py  test_rdfdataset.py  test_sample.py  test_sampling.py  test_site.py  test_sitevisit.py
