[tool.poetry]
name = "bdrgateway-testclient"
version = "0.2.0"
description = ""
authors = ["nicholascar <nick@kurrawong.ai>", "David Habgood <>"]

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
httpx = "^0.26.0"
rdflib = "^7.0.0"
pyshacl = "^0.25.0"
pytest = "^8.0.0"
Shapely = "^1.8.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
